# nicegui-practice

./: Dockerfile  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build_image.yml
nicegui_practice/: date.py  main.py
