[tool.poetry]
name = "nicegui-practice"
version = "0.1.0"
description = ""
authors = ["Tatsuya Tomita <tat@seriousexplosion.net>"]
readme = "README.md"
packages = [{include = "nicegui_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
